# upscale

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
scripts/: fetch-models.sh  fetch-sidecars.ps1  fetch-sidecars.sh  lib.sh  versions.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  estimate.rs  events.rs  lib.rs  main.rs  paths.rs  probe.rs  process.rs  state.rs
src-tauri/src/pipeline/: cleanup.rs  concat.rs  decode.rs  encode.rs  interpolate.rs  mod.rs  progress.rs  segment.rs  upscale.rs
src/components/: Banner.svelte  DropZone.svelte  ErrorView.svelte  Icon.svelte  ProgressCard.svelte  ResultView.svelte  SettingsPanel.svelte  SourceInfo.svelte  StageBar.svelte  Toggle.svelte
src/lib/: api.ts  events.ts  format.ts  stores.svelte.ts  types.ts
