[package]
name = "animeupscale"
version = "0.1.3"
description = "Апскейл аниме до 4K 60fps (Real-ESRGAN + RIFE + NVENC)"
authors = ["honfred"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "animeupscale_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
